# taki-rapidapi

./: .gitignore  Cargo.toml  README.md  config.json  hello.py  justfile  pyproject.toml
py/prototype/: main.py
rapid_api/: __init__.py  _core.pyi  cli.py  rapid_api.pyi
src/: lib.rs
