[package]
name = "taki-rapidapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rapid_api"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module"] }
wtx = "0.25.0"

# [tool.maturin]
# features = ["pyo3/extension-module"]
