[package]
name = "taki-rapidapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rapid_api"
crate-type = ["cdylib"]

[dependencies]
axum = { version = "0.8.1", features = ["tracing", "ws"] }
futures = "0.3.31"
hound = "3.5.1"
log = "0.4.25"
pyo3 = { version = "0.23.3", features = ["extension-module"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
simple_logger = "5.0.0"
throbber = "0.1.4"
time = "0.3.37"
tokio = { version = "1.43.0", features = [
  "fs",
  "macros",
  "signal",
  "sync",
  "rt-multi-thread",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
wtx = "0.25.0"

[dev-dependencies]
tracing-test = { version = "0.2.5", features = ['no-env-filter'] }
